--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^0.27.2",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-openapi-client": "^0.2.2"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "eslint": "8.23.1",
